Try and fix wrapping in pre blocks that is sometimes really broken

--- a/_sass/color_schemes/grase.scss
+++ b/_sass/color_schemes/grase.scss
@@ -1,2 +1,6 @@
 $nav-width: 19rem;
 
+pre.hightlight {
+    white-space: pre-wrap;
+}
+
